feat: 발표 자료(PPT·대본) + 원클릭 .exe 데모 추가
- demo 패키지: ApplicationReadyEvent에서 기본 브라우저 자동 오픈(DemoBrowserLauncher),
  demo.open-browser 속성 게이트(기본 false)라 일반 실행/테스트엔 영향 없음,
  부작용은 주입형 BrowserOpener로 분리 + 단위테스트 4개 (전체 72 GREEN)
- README: 원클릭 데모(.exe) 다운로드/실행 + jpackage 재빌드 안내, 발표 자료 링크
- 발표 슬라이드 13장(pptx) + 발표대본 노트 13p(pdf)
- 자체 실행 데모 바이너리는 Release v1.0.0 자산으로 배포(JRE 21 번들, 약 74MB)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>